repaired header style: hide menu items on smaller screens

--- a/_sass/nmtc/_menu.scss
+++ b/_sass/nmtc/_menu.scss
@@ -217,7 +217,7 @@
 
 #overlay-toggle {
   display: none;
-  cursor: pointer; 
+  cursor: pointer;
   &.overlay {
     display: block;
   }
@@ -273,7 +273,7 @@
   }
 
   .menu-wrapper {
-    // display: none;
+    display: none;
   }
 
   .menu {
